@@ -1,5 +1,12 @@
 2021-02-17  Allen D. Ball  <ball@hcf.dev>
 
+	* src/main/java/galyleo/shell/Shell.java:
+	In addToClasspath(String), analyze JARs for likely Maven
+	artifacts.
+	In execute(Shell,InputStream,PrintStream,PrintStream,String,String),
+	print Exception stack traces and REJECTED snippets (with
+	diagnoses) on err.
+
 	* src/main/resources/bootstrap.jsh:
 	Create __ class with invokeStaticMethod() to simplify calls from
 	the JShell client.
